--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_ALGOLIA_APP_ID=YY0FFNI7MF
 NEXT_PUBLIC_ALGOLIA_INDEX=product_TERRAFORM
 NEXT_PUBLIC_ALGOLIA_SEARCH_ONLY_API_KEY=49e670100103ee846816a4b1a577004e
+MKTG_CONTENT_API=https://mktg-content-api.vercel.app
