--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "main": "index.js",
   "scripts": {
     "build": "next build",
+    "build:deploy-preview": "npx ts-node --transpile-only ./scripts/content-repo-preview/build.ts",
     "update-submodules": "git submodule update --init --recursive",
     "cypress": "cypress open",
     "format": "next-hashicorp format",
