--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,10 @@
     "incremental": true
   },
   "exclude": ["node_modules", "ext"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  }
 }
